--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,15 +35,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  flutter_riverpod: ^2.6.1
   google_fonts: ^6.2.1
-  rounded_loading_button_plus: ^3.0.1
-  curved_navigation_bar: ^1.0.6
   http: ^1.3.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.0.11
   provider: ^6.0.5
+  cached_network_image: ^3.4.1
+  sqflite:
 
 dev_dependencies:
   flutter_test:
